<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_rankings"/>

        <Button
            android:id="@+id/buttonAddHero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_add_hero"/>
    </LinearLayout>

    <ListView
        android:id="@+id/listViewRankings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_battle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rowCount="2"
            android:columnCount="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_hero_1"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_gravity="fill_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_hero_2"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal"/>

            <Spinner
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerHero1"
                android:layout_row="1"
                android:layout_column="0">
            </Spinner>
            <Spinner
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerHero2"
                android:layout_row="1"
                android:layout_column="1">
            </Spinner>

        </GridLayout>

        <Button
            android:id="@+id/buttonFight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_fight"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_results"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textViewResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

</LinearLayout>