<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="6"
    android:columnCount="2">

    <TextView
        android:id="@+id/nametext"
        android:text="@string/label_hero_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"/>

    <EditText
        android:id="@+id/editTextHeroName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_power_1"
        android:layout_row="1"
        android:layout_column="0"/>

    <Spinner
        android:id="@+id/spinnerPower1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0">
    </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/label_power_2"/>

    <Spinner
        android:id="@+id/spinnerPower2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0">
    </Spinner>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_save"
        android:layout_row="5"
        android:layout_column="1"/>
</GridLayout>